--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -124,3 +124,11 @@
     text-align: center;
     box-shadow: 3px -4px 159px -27px rgba(255, 92, 255, 1);
   }
+
+  .m-0-10 {
+    margin: 0px 10px;
+  }
+
+  .m-top {
+    top:15vh;
+  }
