--- a/src/index.css
+++ b/src/index.css
@@ -68,9 +68,9 @@ body {
     font-weight: 300;
 }
 
-.loader svg {
+/* .loader svg {
     position: absolute;
-    top: 0;
+    top: 100;
     left: 0;
     width: 100vw;
     height: 100vh;
@@ -82,25 +82,34 @@ body {
     right: 0;
     bottom: 0;
     margin: auto;
-    /* background-color: #000; */
+    /* background-color: #000; 
 
+} */
+.loader_parent {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    z-index: 999;
 }
 
-.loader {}
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 37px;
+    font-weight: bold;
+}
 
-.bg-image {
-    /* The image used */
-    background-color: #000;
+.loader_parent.blurred {
+  display: block;
+}
 
-    /* Add the blur effect */
-    filter: blur(8px);
-    -webkit-filter: blur(1px);
-
-    /* Full height */
-    height: 100%;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.blurred ~ * {
+  filter: blur(3px);
 }
