--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,10 @@ body {
     border-radius: 100% !important;
     color: #000;
     background-color: #ddd;
-    padding: 0px 5px;
+    padding: 3px 9px;
+    font-weight: bold;
+    font-family: "Urbanist", sans-serif;
+    font-size: 15px;
 }
 
 .page-item:first-child .page-link {
@@ -117,9 +120,19 @@ body {
 .blurred ~ * {
   filter: blur(3px);
 }
+.f-white {
+    color: #fff;
+}
 
 .signout {
     background-color: red !important;
     border-radius: 7px !important;
     padding: 5px 10px !important;
+}
+
+.page-item .active .page-link {
+    background: #fff;
+    color: #000;
+    font-weight: bold;
+
 }
