--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -1,6 +1,6 @@
 .nav-logo-img {
-    width: 50px;
-    height: 40px;
+    width: 60px;
+    height: 50px;
 }
 
 .dashboard {
@@ -47,6 +47,12 @@
 
 .subscribeBtn:hover {
     transform: scale(1.04);
+}
+
+.subscribeBtn[disabled] {
+    cursor: not-allowed;
+  pointer-events: all !important;
+    background-color: #cccccc;
 }
 
 .bannerCont {
