--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -3,6 +3,11 @@
     height: 50px;
 }
 
+.nav-logo-img-admin {
+    width: 150px;
+    height: 50px;
+}
+
 .dashboard {
     background-color: #000;
     color: #fff;
@@ -127,11 +132,15 @@
     /* padding: 30px 20px; */
     padding: 25px 40px;
     background-color: black !important;
+    background: url('./assets/images/bg-modal.png') !important; 
+    background-position: center !important;
+    background-repeat: no-repeat;
+    /* background-size: 102% 102%; */
     border-radius: 10px;
-    box-shadow: 0px -7px 189px -35px rgba(255, 99, 255, 1);
+    box-shadow: 0px -7px 100px -35px rgba(255, 99, 255, 1);
     color: white !important;
     text-align: center;
-    box-shadow: 3px -4px 159px -27px rgba(255, 92, 255, 1);
+    /* box-shadow: 3px -4px 159px -27px rgba(255, 92, 255, 1); */
 
 }
 
